# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import ("//build/ohos.gni")

## Build libpixman.so {{{
config("libpixman_config") {
  visibility = [ ":*" ]

  include_dirs = [
    ".",
  ]

  cflags = [
    "-DHAVE_CONFIG_H",
    "-Wno-unknown-attributes",
    "-Wno-unused-local-typedef",
    "-Wno-unused-variable",
    "-Wno-ignored-qualifiers",
    "-Wno-incompatible-pointer-types",
  ]
}

config("libpixman_public_config") {
  include_dirs = [
    "pixman",
  ]

  cflags = [
  ]
}

ohos_shared_library("libpixman") {
  sources = [
    "pixman/pixman.c",
    "pixman/pixman-access.c",
    "pixman/pixman-access-accessors.c",
    "pixman/pixman-bits-image.c",
    "pixman/pixman-combine32.c",
    "pixman/pixman-combine-float.c",
    "pixman/pixman-conical-gradient.c",
    "pixman/pixman-filter.c",
    "pixman/pixman-mips.c",
    "pixman/pixman-arm.c",
    "pixman/pixman-ppc.c",
    "pixman/pixman-edge.c",
    "pixman/pixman-edge-accessors.c",
    "pixman/pixman-fast-path.c",
    "pixman/pixman-glyph.c",
    "pixman/pixman-general.c",
    "pixman/pixman-gradient-walker.c",
    "pixman/pixman-image.c",
    "pixman/pixman-implementation.c",
    "pixman/pixman-linear-gradient.c",
    "pixman/pixman-matrix.c",
    "pixman/pixman-noop.c",
    "pixman/pixman-radial-gradient.c",
    "pixman/pixman-region16.c",
    "pixman/pixman-region32.c",
    "pixman/pixman-solid-fill.c",
    "pixman/pixman-timer.c",
    "pixman/pixman-trap.c",
    "pixman/pixman-utils.c",
  ]

  configs = [
    ":libpixman_config",
  ]

  public_configs = [
    ":libpixman_public_config",
  ]

  deps = [
  ]

  public_deps = [
  ]

  part_name = "graphic_standard"
  subsystem_name = "graphic"
}
## Build libpixman.so }}}
